Bug 153690 - UI: Calc doesn't show dialogs in full screen mode and freezes
Summary: UI: Calc doesn't show dialogs in full screen mode and freezes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) All
: medium critical
Assignee: Matt K
URL:
Whiteboard: target:24.8.0
Keywords:
: 158675 158676 (view as bug list)
Depends on:
Blocks: Full-Screen-Mode
  Show dependency treegraph
 
Reported: 2023-02-17 13:29 UTC by david smith
Modified: 2023-12-27 09:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description david smith 2023-02-17 13:29:10 UTC
Description:
Calc is unusable after selecting Standard filter in full screen

Steps to Reproduce:
1. Enter full screen mode

2. Click on an auto-filter arrow and select Filter by Condition > Standard Filter...

3. The Standard Filter window doesn't appear and Calc becomes unusable. I have to kill LibreOffice in Task Manager (and lose any unsaved changes).



Actual Results:
I had to kill the LibreOffice task in Task Manager

Expected Results:
It should show the Standard Filter window


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 1 Stéphane Guillou (stragu) 2023-02-17 15:27:29 UTC
Reproduced in:

OpenOffice.org 3.3.0
OOO330m20 (Build:9567)

Version: 6.0.0.3
Build ID: 64a0f66915f38c6217de274f0aa8e15618924765
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-AU (en_AU.UTF-8); Calc: group

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b52117c0be97c45824d2897657084f8ac7e9bf42
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I also get an internal error for /opt/libreoffice.../program/xid-fullscreen-on-all-monitors on Ubuntu when going to fullscreen, since 6.0. Could be related to my multi-monitor setup.
Comment 2 david smith 2023-02-17 17:43:42 UTC
OP here.

1. Stéphane Guillou (stragu) mentioned multi-monitor setup. That crossed my mind, even though it doesn't apply to me.

When I had two monitors a while back, on rare occasions I program would become unusable because the window it was trying to open was, as far as the program was concerned, on another monitor, which was currently not plugged in.

So the window would be off-screen and there was no way to proceed without ending the task.

That's not what's happening here, because it's a fairly new laptop and it's never had a second monitor attached. But it does remind me of that.

2. I should say that Calc doesn't *completely* freeze. I can still click on the Full Screen floating drop-down thing (screenshot: https://i.imgur.com/0ZQw8NT.png), and I can scroll up and down the sheet with the mouse wheel.
Comment 3 Matt K 2023-12-13 02:09:52 UTC
I have a fix for this that I'll post soon.  However, there are other dialogs that can be customized to show on the "Full Screen" panel, such as Record and "Show" changes.  The same problem occurs when trying to click "Show" on the panel.  I will assume each dialog that can be shown is its own bug and will file them accordingly.
Comment 4 Matt K 2023-12-13 02:20:45 UTC
Fix posted at https://gerrit.libreoffice.org/c/core/+/160660
Comment 5 Matt K 2023-12-13 04:02:13 UTC
It turns out there are a lot of dialogs that have this issue, so I'm converting this bug to be the catch-all for any dialogs in full-screen mode.  However, there are still some dialogs that are not fixed in the same way, e.g. "Manage Changes" (tdf#158676).
Comment 6 Matt K 2023-12-13 04:03:21 UTC
*** Bug 158675 has been marked as a duplicate of this bug. ***
Comment 7 Matt K 2023-12-13 04:54:23 UTC
*** Bug 158676 has been marked as a duplicate of this bug. ***
Comment 8 Matt K 2023-12-13 04:57:42 UTC
(In reply to Matt K from comment #5)
> However, there are still some dialogs that are not fixed in the same way,
> e.g. "Manage Changes" (tdf#158676).

It looks like that dialog may be the only case that needs to be handled differently, so I've added it to the fix for this bug.
Comment 9 Commit Notification 2023-12-21 20:18:23 UTC
Matt K committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e760dcf43052212952191ccdadbfb677fea3b5b8

tdf#153690 Prevent invisible dialogs in Calc Full Screen

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Stéphane Guillou (stragu) 2023-12-27 09:10:12 UTC
Fix verified for the standard filter dialog in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40617d867346956588ac023511f31210107217f4
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Matt and David!