sc/source/ui/inc/reffact.hxx
@@ -28,7 +28,7 @@
     class Class : public SfxChildWindow                                         \
     {                                                                           \
     public:                                                                     \
-        Class( vcl::Window*, sal_uInt16, SfxBindings*, const SfxChildWinInfo* ); \
+        Class( vcl::Window*, sal_uInt16, SfxBindings*, SfxChildWinInfo* ); \
         SFX_DECL_CHILDWINDOW_WITHID(Class);                                     \
     };
 
